--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Selected Publications"
+title: "Selected/Recent Publications"
 permalink: /publications/
 author_profile: true
 ---
